<resources>
    <string name="app_name">coldwallet</string>
    <string name="return_text">返回</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="delete">删除</string>
    <string name="please_wait">请稍候</string>
    <!--主界面-->
    <string name="main_asset">资产</string>
    <string name="main_market">行情</string>
    <string name="main_network">网络</string>
    <string name="main_me">我的</string>
    <!--我的-->
    <string name="mine_me_wallet">我的钱包</string>
    <string name="mine_me_qr_code">我的二维码</string>
    <string name="mine_message">个人消息</string>
    <string name="mine_exchange_navigation">交易所导航</string>
    <string name="mine_notice">公告</string>
    <string name="mine_setting">设置</string>
    <string name="wallet_name">钱包名称</string>
    <string name="change_password">修改密码</string>
    <string name="export_private">导出私钥</string>
    <string name="export_keystore">导出keystore</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="original_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="sure_new_passwrod">确认密码</string>
    <string name="change_passwrod_text">忘记密码？导入助记词或者私钥可重置密码</string>
    <string name="immediately_the_import">马上导入</string>
    <string name="the_new_password_does_not_agree_with_repeat_password">新密码与重复密码不一致</string>
    <string name="old_passwrod_error">原密码输入错误</string>
    <string name="wallet_passwrod_error">钱包密码错误</string>
    <string name="passwrod_success">密码已修改</string>
    <string name="copy">复制</string>
    <string name="replicated">已复制</string>
    <string name="input_exchange_address">输入交易所地址</string>
    <string name="input_exchange_name">输入交易所名称</string>
    <string name="add_exchange">添加交易所</string>
    <string name="add">添加</string>\
    <string name="change_login_password">修改登录密码</string>
    <!--资产-->
    <string name="total_assets_text">总资产</string>
    <string name="add_asset">添加资产</string>
    <string name="recent_transaction_records">最近交易记录</string>
    <string name="transfer_accounts">转账</string>
    <string name="proceeds">收款</string>
    <string name="enter_the_amount_of_payment">输入收款数额</string>
    <string name="copy_the_wallet_address">复制钱包地址</string>
    <string name="payment_code">收款码</string>
    <string name="wallet_address">钱包地址</string>
    <string name="transfer_amount">转账金额</string>
    <string name="remarks">备注信息</string>
    <string name="cost_of_absenteeism">旷工费用</string>
    <string name="slow">慢</string>
    <string name="quick">快</string>
    <string name="transfer_success">转账成功</string>
    <string name="detailed_information_is_as_follows">详细信息如下</string>
    <!--行情-->
    <string name="assets_name">资产名称</string>
    <string name="new_price">最新价</string>
    <string name="price_limit">涨跌幅</string>
    <!--注册-->
    <string name="register">注册</string>
    <string name="please_input_account">请输入账户名称</string>>
    <string name="please_input_password">请输入至少为8位，字母和数字组成的密码</string>
    <string name="please_repetition_input_pasaword">请重复输入密码</string>
    <string name="next_step">下一步</string>
    <string name="wallet_passwrod">请输入6-16位字母、数字的密码</string>
    <!--登录-->
    <string name="please_input_wallet_password">请输入钱包密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_dialog_title">此操作将无法撤回，请慎重！</string>
    <string name="login_dialog_content">此操作将覆盖原来的帐号，您确定要继续吗？</string>
    <!--忘记密码-->
    <string name="forget_passwrod_text">您可以重新注册一个帐号，通过导入钱包的方式重新使用该钱包，或者拨打我们的电话0593-3333333，我们非常乐意解决您的问题，感谢使用!</string>
    <!--指纹-->
    <string name="set_fingerprint">设置指纹密码</string>
    <string name="please_set_your_continue">请设置你的指纹</string>
    <string name="fingerprint_continue">继续</string>、
    <string name="fingerprint_finish">完成</string>
    <string name="wallet">钱包</string>
    <!--备份钱包-->
    <string name="backups_wallet">备份钱包</string>
    <string name="last_setp_immediately_backups_wallet">最后一步：立即备份你的钱包</string>
    <string name="backups_wallet_explain">备份钱包：导出助记词并抄写到安全的地方，千万不要保存到网络上。</string>
    <string name="immediately_backups">立即备份</string>
    <string name="password_error">密码错误</string>
    <!--备份助记词-->
    <string name="please_do_not_capture">请勿截图</string>
    <string name="please_do_not_capture_content">抄写助记词并存放到安全的地方</string>
    <string name="i_know">知道了</string>
    <string name="affirm_memic">确认助记词</string>
    <string name="please_affirm_memic">请确认助记词</string>
    <string name="please_affirm_memic_content">请按照顺序点击助记词，以确认你的备份助记词正确</string>
    <string name="error_menic">助记词选取错误，请重新选择</string>
    <!--引导页面-->
    <string name="register_explain">注册说明</string>
    <string name="create_wallet">创建钱包</string>
    <string name="to_lead_wallet">导入钱包</string>
    <string name="login">登录</string>
    <string name="start_fingerprint_recognition">开始指纹识别</string>
    <string name="backups_memic">备份助记词</string>
    <!--设置-->
    <string name="currency_unit">货币单位</string>
    <string name="system_setting">系统设置</string>
    <string name="version_updata">版本更新</string>
    <string name="contact_service">联系客服</string>
    <string name="seting_about">关于</string>
    <string name="fingerprint">指纹</string>
    <string name="currency_rmb">人民币</string>
    <string name="currency_btc">比特币</string>
    <string name="currency_fb">法币</string>
    <string name="save">保存</string>
    <string name="add_fingerprint">添加指纹</string>
    <string name="login_out">退出当前帐号</string>
    <string name="confirm_the_exit_from_the_current_account">确认退出当前帐号？</string>
    <string name="making_a_call">拨打电话：</string>
    <string name="current_versions">当前版本</string>
    <string name="the_current_is_the_latest_version">当前已经是最新版本</string>
    <string name="new_versions">最新版本</string>
    <string name="updata">更新</string>
    <string name="display_and_brightness">显示与亮度</string>
    <string name="date_and_time">日期与时间</string>、
    <string name="select_language">选择语言</string>
    <string name="automatic_adjustment">自动调节</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
