<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_head"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_currencyunit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:textSize="@dimen/font_size16"
                android:layout_gravity="center_vertical"
                android:textColor="@color/text_color_666666"
                android:text="@string/currency_unit"/>
        </LinearLayout>
        <View
            style="@style/Ge_Line_V_Style"
            android:layout_marginLeft="10dp"/>
        <LinearLayout
            android:id="@+id/ll_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:textSize="@dimen/font_size16"
                android:layout_gravity="center_vertical"
                android:textColor="@color/text_color_666666"
                android:text="@string/fingerprint"/>
        </LinearLayout>
        <View
            style="@style/Ge_Line_V_Style"
            android:layout_marginLeft="10dp"/>
        <LinearLayout
            android:id="@+id/ll_system_seting"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:textSize="@dimen/font_size16"
                android:layout_gravity="center_vertical"
                android:textColor="@color/text_color_666666"
                android:text="@string/system_setting"/>
        </LinearLayout>
        <View
            style="@style/Ge_Line_V_Style"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:id="@+id/ll_versions"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="25dp"
                android:text="@string/version_updata"
                android:textColor="@color/text_color_666666"
                android:textSize="@dimen/font_size16" />
        </LinearLayout>

        <View
            style="@style/Ge_Line_V_Style"
            android:layout_marginLeft="10dp"/>
        <LinearLayout
            android:id="@+id/ll_contact"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:textSize="@dimen/font_size16"
                android:layout_gravity="center_vertical"
                android:textColor="@color/text_color_666666"
                android:text="@string/contact_service"/>
        </LinearLayout>
        <View
            style="@style/Ge_Line_V_Style"
            android:layout_marginLeft="10dp"/>
        <LinearLayout
            android:id="@+id/ll_about"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:textSize="@dimen/font_size16"
                android:layout_gravity="center_vertical"
                android:textColor="@color/text_color_666666"
                android:text="@string/seting_about"/>
        </LinearLayout>
        <View
            style="@style/Ge_Line_V_Style"
            android:layout_marginLeft="10dp"/>
        <LinearLayout
            android:id="@+id/ll_changelginpwd"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:textSize="@dimen/font_size16"
                android:layout_gravity="center_vertical"
                android:textColor="@color/text_color_666666"
                android:text="@string/change_login_password"/>
        </LinearLayout>
        <View
            style="@style/Ge_Line_V_Style"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/login_out"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/circular_bead_red_10px"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/font_size18"
            android:text="@string/login_out"/>
    </LinearLayout>
</LinearLayout>