<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_head"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color_f5f5f5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/font_size16"
            android:textColor="@color/four_font_color"
            android:text="@string/please_do_not_capture"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/font_size16"
            android:textColor="@color/four_font_color"
            android:text="@string/please_do_not_capture_content"/>

        <TextView
            android:id="@+id/tv_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textSize="@dimen/font_size14"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/text_color_999999"
            android:text="ihhuihihuihihiuhhihuihuidddhuihuighuishguisghuisghuisghuisghgfhuishfdshfuishfuisfhuishf"/>

        <TextView
            android:id="@+id/btn_copy"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/circular_bead_blue_10px"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size18"
            android:text="@string/copy"/>
    </LinearLayout>

</LinearLayout>