<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="200dp"
        android:background="@drawable/circular_bead_white_10px"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/confirm_the_exit_from_the_current_account"
            android:textColor="@color/four_font_color"
            android:textSize="@dimen/font_size16" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="50dp"
            android:background="@color/dialog_line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_cancel"
                android:layout_width="105dp"
                android:layout_height="45dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/circular_bead_hollow_blue_10px"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/circular_bead_blue" />

            <TextView
                android:id="@+id/dialog_sure"
                android:layout_width="105dp"
                android:layout_height="45dp"
                android:background="@drawable/circular_bead_blue_10px"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>