<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/market_top_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size19"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/main_market" />

            <ImageView
                android:id="@+id/market_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"/>
        </RelativeLayout>
        <View
            style="@style/Line_H_Style"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size14"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:textColor="@color/market_text_color"
                android:text="@string/assets_name"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size14"
                    android:layout_marginRight="60dp"
                    android:textColor="@color/market_text_color"
                    android:text="@string/new_price"/>

                <TextView
                    android:id="@+id/price_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size14"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/market_text_color"
                    android:text="@string/price_limit"/>
            </LinearLayout>
        </RelativeLayout>
        <View
            style="@style/Line_H_Style"/>
    </LinearLayout>
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.scwang.smartrefresh.layout.header.ClassicsHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/market_content_bg"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:divider="@null">
        </ListView>
    </LinearLayout>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>